# students_exam_scores

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  deployment.yaml  pyproject.toml  service.yaml
deploy/: run_app.sh
notebooks/: 01_exploring_data.ipynb  01_exploring_data_and_test_training.ipynb  02_model_training.ipynb  02_training_different_models.ipynb  03_best_model_training.ipynb
reports/: sweetviz_report.html
src/: predict.py  train.py
src/ml_models/: best_model.pkl
